--- a/trunk/TODO
+++ b/trunk/TODO
@@ -1,5 +1,5 @@
 Ontologia RIM
-* Definire i namespace per il RIM e per i datatype
+X Definire i namespace per il RIM e per i datatype
 * Come encodare le proprietà degli oggetti
 * Consistenza delle ontologie generate da xsd2owl
 * Come modellare i mapping espliciti
