Base RIM ontology generator nearly completed. Added attributes and associations handlers.

--- a/trunk/TODO
+++ b/trunk/TODO
@@ -1,8 +1,14 @@
 Ontologia RIM
 X Definire i namespace per il RIM e per i datatype
-* Come encodare le proprietà degli oggetti
+X Come encodare le proprietà degli oggetti
+* Come gestire i codici CNE/CWE (richiesti?)
+* Datatype
+* Vocabulary
 * Consistenza delle ontologie generate da xsd2owl
 * Come modellare i mapping espliciti
 
 File di mapping
 * Modificare l'ontologia di Artemis x integrare le funzionalità di OWL (uguaglianza, unione e intersezione) con quelle esistenti
+
+LICENZE
+La licenza HL7 mi permette di mettere mano al loro codice (xslt) ?
