Added datatypes adapting the work of Samson Tu Added trasformation to fix datatypes Added Makefile (for internal use)

--- a/trunk/TODO
+++ b/trunk/TODO
@@ -4,6 +4,7 @@ X Come encodare le proprietà degli oggetti
 * Come gestire i codici CNE/CWE (richiesti?)
 * Datatype
 * Vocabulary
+	Il vocabulary è una collezione di codici mnemonici specifici di ogni contesto. Dovranno essere modellati come ObjectProperty con enumerazione dei dati consentiti
 * Consistenza delle ontologie generate da xsd2owl
 * Come modellare i mapping espliciti
 
