HL7: Nearly completed conversion of CMETs. There are still issues with URI name conflicts and with how to handle "hasValue"

--- a/trunk/TODO
+++ b/trunk/TODO
@@ -2,7 +2,7 @@ Ontologia RIM
 X Definire i namespace per il RIM e per i datatype
 X Come encodare le proprietà degli oggetti
 * Come gestire i codici CNE/CWE (richiesti?)
-* Datatype
+X Datatype
 * Vocabulary
 	Il vocabulary è una collezione di codici mnemonici specifici di ogni contesto. Dovranno essere modellati come ObjectProperty con enumerazione dei dati consentiti
 * Consistenza delle ontologie generate da xsd2owl
