Mapper: fixed two bugs in engine. Still not working...

--- a/trunk/mapper/doc/mapper.texinfo
+++ b/trunk/mapper/doc/mapper.texinfo
@@ -37,7 +37,7 @@ by the Foundation.
 @end ifinfo
 
 @titlepage
-@title mapper
+@title Progetto Veggente - mapper
 @subtitle Provide and execute semantic mapping
 @subtitle for mapper Version @value{VERSION}
 @author by Alessio Carenini
