Internal restructuration underway

--- a/trunk/TODO
+++ b/trunk/TODO
@@ -8,8 +8,8 @@ X Datatype
 * Consistenza delle ontologie generate da xsd2owl
 * Come modellare i mapping espliciti
 
-File di mapping
-* Modificare l'ontologia di Artemis x integrare le funzionalità di OWL (uguaglianza, unione e intersezione) con quelle esistenti
+Mapping (non nella tesi)
+* Usare il concetto di builtin di CWM per scaricare l'onere del mapping interamente sul motore di inferenza
 
-LICENZE
-La licenza HL7 mi permette di mettere mano al loro codice (xslt) ?
+Collaborazione
+* Definire un'ontologia per il grafo RDF che dovrà contenere le informazioni sugli utenti e sui permessi delle sessioni (documenti) attive
